# vre-jupyterlab-extension

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  install.json  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json
.github/workflows/: extension-nightly-integration.yml  extension-pr-ci.yml  extension-publish.yml
coverage/: ci-summary.json  ci-summary.md  coverage-summary.json  lcov.info  test-results.tap
coverage/lcov-report/: freeze-state.js.html  index.html
coverage/tmp/: coverage-15017-1777273840314-0.json  coverage-15030-1777273840395-0.json  coverage-15031-1777273840416-0.json
labextension/: package.json
labextension/static/: 453.3c536321f68c2679ecca.js  716.01723524361e311ae354.js  716.1570083ef4b59450cb09.js  716.2e76a271e988cb548a35.js  716.88f659b557ac493a9c41.js  716.8f4278197f54a0435608.js  716.d22a5d6202826e59f8bb.js  716.d436399104e0ad015828.js  716.e3a9cab1725eddd69fef.js  716.e480f71bd62b7495c411.js  716.eba1d5d97d4c248e97bd.js  832.f94c2e550271529dbba7.js  remoteEntry.18f6729b1939a68c5235.js  remoteEntry.1b2f746ee4b98a64016b.js  remoteEntry.20841ae1f7571b1baad6.js  (+8 more)
schema/: plugin.json
scripts/: clean.mjs  jupyter_wrapper.py
src/: index.ts
style/: execution.css  index.css  language.css
tests/: ci-summary.json  ci-summary.md  ci-summary.mjs  config.test.mjs  freeze-state.test.mjs  integration-smoke.test.mjs  test-results.tap  test_jupyter_wrapper.py
vre_jupyterlab_extension/: __init__.py
vre_jupyterlab_extension.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+13 files in other folders)
