[metadata]
name = vre-jupyterlab-extension
version = 0.1.2
description = VRE JupyterLab Extension with VRE DSL highlighting and notebook execution guard
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
author = VRE Team
url = https://gitlab.kit.edu/kit/virtmat-tools
project_urls =
    Source = https://gitlab.kit.edu/kit/virtmat-tools
    Tracker = https://gitlab.kit.edu/kit/virtmat-tools/-/issues
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 4
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10
install_requires =
    jupyterlab>=4.2,<5

[options.packages.find]
where = .
include =
    vre_jupyterlab_extension*